Fixed Button Overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ span{
         font-family: Arial, Helvetica, sans-serif;
         font-weight: bolder;
         line-height: 30px;
-        transform: translate(-25%, -100%);
+        transform: translate(0, -50%);
     }
 }
 
